# helios

./: Cargo.toml  TODO.md  rustfmt.toml  test_report.toml
helios_core/: Cargo.toml
helios_core/benches/: estimation.rs  mapping.rs  planning.rs
helios_core/src/: abstractions.rs  context.rs  frames.rs  lib.rs  messages.rs  ports.rs  prelude.rs  sensor_data.rs  sensor_reading.rs  types.rs
helios_core/src/control/: direct_velocity.rs  feedforward_pid.rs  lqr.rs  metrics.rs  mod.rs  pid.rs  siso_pid.rs  steering_pid.rs
helios_core/src/control/dynamics/: ackermann.rs  mod.rs
helios_core/src/data/: envelope.rs  messages.rs  mod.rs  ports.rs  primitives.rs  sensor.rs
helios_core/src/estimation/: ekf.rs  mod.rs
helios_core/src/estimation/dynamics/: integrated_imu.rs  mod.rs
helios_core/src/estimation/filters/: ekf.rs  mod.rs  ukf.rs
helios_core/src/estimation/measurement/: accelerometer.rs  gps.rs  gyroscope.rs  magnetometer.rs  mod.rs
helios_core/src/frames/: conventions.rs  layout.rs  mod.rs
helios_core/src/mapping/: mod.rs  none.rs  occupancy_grid.rs
helios_core/src/models/: ackermann.rs  generic.rs  imu.rs  mod.rs
helios_core/src/models/controls/: ackermann.rs  mod.rs
helios_core/src/models/dynamics/: ackermann.rs  mod.rs
helios_core/src/models/estimation/: mod.rs
helios_core/src/models/measurement/: gps.rs  imu.rs  mod.rs
helios_core/src/models/perception/: lidar_2d.rs  lidar_3d.rs  mod.rs
helios_core/src/path_following/: mod.rs  pure_pursuit.rs  steering_pid.rs
helios_core/src/planning/: astar.rs  context.rs  mod.rs  rrt.rs  search_space.rs  types.rs
helios_core/src/planning/astar/: grid_space.rs  mod.rs  search.rs  smoothing.rs
helios_core/src/sensors/: accelerometer.rs  gps.rs  gyroscope.rs  lidar_2d.rs  magnetometer.rs  mod.rs  noise.rs  raycasting.rs
helios_core/src/slam/: mod.rs
helios_core/src/tracking/: mod.rs
helios_core/src/utils/: determinism.rs  integrators.rs  metrics.rs  mod.rs
helios_core/tests/: forward_vs_measurement.rs
helios_runtime/: Cargo.toml
helios_runtime/src/: assembler.rs  body.rs  channels.rs  diagnostics.rs  estimation.rs  lib.rs  mapping.rs  pipeline.rs  port.rs  prelude.rs  runtime.rs  stage.rs  stamped.rs  validation.rs
helios_runtime/src/config/: agent.rs  autonomy.rs  controller.rs  estimator.rs  mapper.rs  mod.rs  path_following.rs  planner.rs  slam.rs
helios_runtime/src/pipeline/: autonomy_pipeline.rs  build_error.rs  control_core.rs  descriptor.rs  estimation_core.rs  key_format.rs  mapping_core.rs  mod.rs  node.rs  node_pipeline.rs  path_following_core.rs  rate_gate.rs
helios_runtime/src/pipeline/builders/: controller.rs  estimator.rs  mod.rs  path_follower.rs  planner.rs
helios_runtime/src/pipeline/nodes/: controller.rs  gaussian_estimator.rs  mock_oracle_estimator.rs  mod.rs  occupancy_grid.rs  path_follower.rs  search_planner.rs
helios_runtime/src/registry/: contexts.rs  controller.rs  dynamics.rs  gaussian_estimator.rs  mapper.rs  measurement_model.rs  mock_estimator.rs  mod.rs  path_follower.rs  search_planner.rs
helios_runtime/tests/: integration.rs
helios_runtime/tests/integration/: common.rs  dag.rs  pipeline.rs  stages.rs  validation.rs
helios_sim/: Cargo.toml  cargo.toml
helios_sim/assets/catalog/agents/: ackermann_car.toml  ackermann_car_basic.toml  ackermann_car_pro.toml
helios_sim/assets/catalog/sensor_suites/: ins_advanced.toml
helios_sim/assets/catalog/sensors/: gps_pro.toml  imu_basic.toml  imu_pro.toml  lidar2d.toml  magnetometer_pro.toml
helios_sim/assets/catalog/vehicles/: ackermann_base.toml  ackermann_sedan.toml  ackermann_truck.toml
helios_sim/assets/maps/: starter_world2.glb  starter_world2_collider.glb  starter_world_collider.glb
helios_sim/assets/scenarios/: 00_tutorial_showcase.toml  simple_car_scenario.toml
helios_sim/examples/: 01_full_pipeline.rs  02_estimation_only.rs  03_mapping_only.rs  04_planning_only.rs  05_control_only.rs  06_path_tracking.rs
helios_sim/src/: cli.rs  lib.rs  prelude.rs
helios_sim/src/agents/: mod.rs
helios_sim/src/agents/sensors/: gps.rs  imu.rs  magnetometer.rs  mod.rs  plugin_set.rs  raycasting.rs  state_sensor.rs
helios_sim/src/agents/vehicles/: mod.rs  plugin_set.rs
helios_sim/src/brain_bridge/: components.rs  control_output.rs  goal_input.rs  mod.rs  odom_output.rs  sensor_publisher.rs  spawn.rs  tick.rs
helios_sim/src/brain_bridge/autonomy/: mod.rs
helios_sim/src/brain_bridge/control/: mod.rs
helios_sim/src/brain_bridge/planning/: mod.rs
helios_sim/src/config/: catalog.rs  mod.rs  resolver.rs
helios_sim/src/config/structs/: pose.rs  scenario.rs  sensors.rs  simulation.rs  terrain.rs  world_object.rs
helios_sim/src/core/: app_state.rs  components.rs  events.rs  ground_truth.rs  host.rs  mod.rs  prng.rs  sim_runtime.rs  simulation_setup.rs  spawn_requests.rs
helios_sim/src/core/transforms/: bevy_bridge.rs  constants.rs  frame_types.rs  mod.rs
helios_sim/src/host/: mod.rs
helios_sim/src/plugins/: mod.rs
helios_sim/src/plugins/control/: mod.rs
helios_sim/src/plugins/planning/: mod.rs
helios_sim/src/plugins/sensors/: gps.rs  imu.rs  magnetometer.rs  raycasting.rs
helios_sim/src/plugins/vehicles/: plugin_set.rs
helios_sim/src/registry/: adapters.rs  contexts.rs  mod.rs  plugin.rs
helios_sim/src/simulation/: mod.rs  profile.rs  profile_plugin.rs
helios_sim/src/utils/: mod.rs  serde_helpers.rs
helios_sim/src/world/: atmosphere.rs  mod.rs  object_helpers.rs  objects.rs  terrain.rs
helios_test/: Cargo.toml
helios_test/src/: lib.rs
helios_test/src/assertion/: condition.rs  continuous.rs  evaluator.rs  extract.rs  mod.rs  target.rs  terminal.rs
helios_test/src/metrics/: mod.rs
helios_test/src/monte_carlo/: mod.rs
helios_test/src/report/: console.rs  mod.rs  toml_writer.rs
helios_test/src/run/: mod.rs  observation_ref.rs  scenario_ref.rs  termination.rs  validation.rs
helios_test/src/runner/: lifecycle.rs  mod.rs  state.rs  termination_check.rs  tick.rs
helios_test/src/sim/: headless.rs  metrics.rs  mod.rs  plugin.rs
helios_test/src/statistics/: mod.rs
(+317 files in other folders)
