# Cargo.toml
[workspace]
resolver = "2" # Use the new feature resolver
members = [
    "helios_core",
    "helios_runtime",
    "helios_sim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Samir"]
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
approx = "0.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3 # using cranelift: 3 instead of 1 here, better runtime perf, same compiletimes

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Profiling profile: release optimizations + debug symbols for flamegraph stack traces.
# strip = "none" and split-debuginfo = "unpacked" are required on macOS — release builds
# strip debug info by default, leaving only hex addresses in samply profiles.
[profile.profiling]
inherits = "release"
debug = true
strip = false
split-debuginfo = "unpacked"

