[package]
name = "helios_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
helios_core = { path = "../helios_core" }
nalgebra = { workspace = true }
serde = { workspace = true }
arc-swap = "1.9.1"
atomic_float = "1.1.0"
log = "0.4"
