[package]
name = "helios_sim"
# Inherit metadata from the workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Bevy and its ecosystem
bevy = { workspace = true }
avian3d = "0.6.0"

# The crucial dependency on our pure core library
helios_core = { path = "../helios_core", features = ["bevy"] }
helios_runtime = { path = "../helios_runtime" }
nalgebra = { workspace = true, features = ["serde-serialize"] }
serde_json = "1.0.149"
serde = { workspace = true }
figment = { version = "0.10.19", features = ["toml"] }
rand = { workspace = true }
rand_chacha = "0.3.1"                                           # match bevy
rand_distr = { workspace = true }
walkdir = "2.5.0"
clap = { version = "4.5", features = ["derive"] }
dhat = { version = "0.3", optional = true }
tracing = { workspace = true }


[features]
dhat-heap = ["dhat"]

[dev-dependencies]
approx = { workspace = true }
