[package]
name = "helios_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
sim = ["dep:helios_sim", "dep:bevy", "dep:clap"]
hw = []
fake_body = []

[dependencies]
helios_core = { version = "0.1.0", path = "../helios_core" }
helios_runtime = { version = "0.1.0", path = "../helios_runtime" }
serde.workspace = true
thiserror.workspace = true
toml = "1.1.2"
tracing = { workspace = true }

# optional — pulled in only by the `sim` feature. The bin assembles the Bevy
# host directly, so it needs both physics and the engine. A future
# `HeliosHeadlessHost` in would let us drop `bevy` from here entirely.
helios_sim = { version = "0.1.0", optional = true, path = "../helios_sim/" }
bevy = { workspace = true, optional = true }
clap = { version = "4.5", optional = true, features = ["derive"] }

[[bin]]
name = "helios_test_sim"
path = "src/bin/helios_test_sim.rs"
required-features = ["sim"]
